// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellLinkTelephone renders custom link text 1`] = `
<DocumentFragment>
  <a
    href="tel:2312322334"
  >
    Click here to call
  </a>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone renders the phone number as link text 1`] = `
<DocumentFragment>
  <a
    href="tel:2312322334"
  >
    (231) 232-2334
  </a>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    -
  </div>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellLinkTelephone should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
